# live-conference-translator

./: .gitignore  CLAUDE.md  PROJECT.yaml  README.md  audio_capture.py  config.py  display.py  downloader.py  file_processor.py  fix.ps1  main.py  pyproject.toml  requirements.txt  setup.ps1  subtitle_writer.py  transcriber.py  transcript_logger.py  translator.py  utils.py
