[project]
name = "live-conference-translator"
version = "0.1.0"
description = "Real-time system audio transcription and translation for Windows (WASAPI + Whisper + Google Translate)"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "PyAudioWPatch>=0.2.12.7",
    "faster-whisper>=1.2.1",
    "deep-translator>=1.11.4",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
